--- a/PRrojetmoi.css
+++ b/PRrojetmoi.css
@@ -4,6 +4,10 @@
     perspective: 5000px;
     cursor: url(image/new.png), auto; 
 }
+.all{
+    display: flex;
+    flex-wrap: wrap;
+}
 body{
     perspective: 1000px;
     font-family: Arial, sans-serif;
